--- a/flutter_demo/pubspec.yaml
+++ b/flutter_demo/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: 2.1.0  #latest version
   json_annotation: ^2.4.0
+  scoped_model: ^1.0.1
 
 
 dev_dependencies:
